Bug 14270 - Samba 4.11 and later give incorrect results for SCOPE_ONE searches
Summary: Samba 4.11 and later give incorrect results for SCOPE_ONE searches
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.11.6
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL: https://gitlab.com/samba-team/samba/-...
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-07 03:56 UTC by Andrew Bartlett
Modified: 2020-02-26 10:26 UTC (History)
4 users (show)

See Also:


Attachments
Backported patch from master (50.84 KB, patch)
2020-02-25 14:18 UTC, Karolin Seeger
kseeger: review? (abartlet)
Details
Backported patch from master incl. cherry-pick information (51.25 KB, patch)
2020-02-25 14:24 UTC, Karolin Seeger
kseeger: review? (abartlet)
metze: review+
Details
patch for Samba 4.11 (cherry-picked from master patch, plus new ldb release) (51.01 KB, patch)
2020-02-25 21:43 UTC, Andrew Bartlett
metze: review-
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Bartlett 2020-02-07 03:56:17 UTC
As reported on the Samba list https://lists.samba.org/archive/samba/2020-January/228043.html

All versions of Samba since 4.11.0 are impacted.
Comment 1 Karolin Seeger 2020-02-24 10:34:43 UTC
Hi,

is there a chance to get the fix into the test branch this week?
Otherwise it won't be included in 4.12.0 or it needs to be delayed.

Thanks!

Karolin
Comment 2 Andrew Bartlett 2020-02-24 16:33:38 UTC
I would like that too.  Sadly no code review has been forthcoming. :-(
Comment 3 Karolin Seeger 2020-02-25 14:18:11 UTC
Created attachment 15820 [details]
Backported patch from master
Comment 4 Karolin Seeger 2020-02-25 14:24:47 UTC
Created attachment 15821 [details]
Backported patch from master incl. cherry-pick information
Comment 5 Karolin Seeger 2020-02-25 14:38:30 UTC
ldb: version 2.1.1 has been shipped to address this one.
Comment 6 Andrew Bartlett 2020-02-25 21:43:26 UTC
Created attachment 15822 [details]
patch for Samba 4.11 (cherry-picked from master patch, plus new ldb release)

Thanks for handling the 4.12 backport, here is the backport for 4.11.
Comment 7 Stefan Metzmacher 2020-02-26 08:34:58 UTC
Comment on attachment 15822 [details]
patch for Samba 4.11 (cherry-picked from master patch, plus new ldb release)

The commit message of the 2.0.9 release says 2.1.1
Comment 8 Karolin Seeger 2020-02-26 08:51:04 UTC
(In reply to Stefan Metzmacher from comment #7)
Pushed to autobuild-v4-11-test with fixed commit message.
Comment 9 Karolin Seeger 2020-02-26 08:51:20 UTC
Pushed to v4-12-test.
Comment 10 Andrew Bartlett 2020-02-26 08:55:04 UTC
(In reply to Karolin Seeger from comment #8)
Thank you very much.
Comment 11 Karolin Seeger 2020-02-26 10:26:50 UTC
Pushed to both branches.
Closing out bug report.

Thanks!